--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
                         colors: {
                             primary: '#111111',
                             secondary: 'rgba(17, 17, 17, 0.7)',
-                            color: 'rgba(17, 17, 17, 0.1)',
-                            cardBorder: 'rgba(17, 17, 17, 0.05)',
+                            cardBorder: 'rgba(17, 17, 17, 0.1)',
                             btnColor: '#B4F461'
                         },
                         fontFamily: {
@@ -63,6 +62,12 @@
 
         <!-- TODO CSS Styles -->
         <style>
+            html {
+                scroll-behavior: smooth;
+            }
+            .active {
+                background-color: #b4f461;
+            }
             /* Custom style for the placeholder color */
             input::placeholder {
                 color: rgba(17, 17, 17, 0.4);
@@ -71,24 +76,33 @@
     </head>
     <body class="font-Lexend">
         <!-- SECTION Header -->
-        <header class="bg-[#F9F7F3]">
-            <nav class="navbar w-10/12 m-auto p-0 pt-6 pb-16">
+        <header class="bg-[#F9F7F3] w-full">
+            <nav class="navbar w-10/12 m-auto p-0 pt-6 md:pb-16 pb-6">
                 <div class="navbar-start">
-                    <button
+                    <a
+                        href="./blog.html"
                         class="btn bg-btnColor text-primary font-semibold text-xl">
                         Blog
-                    </button>
+                    </a>
                 </div>
-                <div class="navbar-center hidden lg:flex gap-4">
-                    <img src="./assets/logo.png" alt="logo" />
-                    <h3 class="text-primary font-semibold text-xl">
+                <div class="navbar-center flex gap-4">
+                    <img
+                        src="./assets/logo.png"
+                        alt="logo"
+                        class="sm:w-auto w-8 sm:mr-0 mr-5" />
+                    <h3
+                        class="text-primary font-semibold text-xl hidden lg:block">
                         Donate Bangladesh
                     </h3>
                 </div>
                 <div class="navbar-end">
-                    <p class="text-xl text-secondary font-semibold flex gap-3">
-                        <img src="./assets/coin.png" alt="coin" />
-                        <span>5500</span>
+                    <p
+                        class="sm:text-xl text-lg text-secondary font-semibold flex sm:gap-3 gap-1">
+                        <img
+                            src="./assets/coin.png"
+                            alt="coin"
+                            class="sm:w-full w-6" />
+                        <span id="totalBudgetAmount">5500</span>
                         <span>BDT</span>
                     </p>
                 </div>
@@ -96,25 +110,30 @@
         </header>
         <!-- !SECTION - END Header -->
 
-        <main class="pb-56">
+        <main>
             <!-- SECTION Navigation Buttons -->
-            <section class="text-center flex justify-center gap-4 mt-20 mb-8">
+            <section
+                class="text-center flex justify-center gap-4 lg:mt-20 lg:mb-8 my-8 w-10/12 m-auto">
                 <button
-                    class="btn bg-btnColor text-primary font-semibold text-xl">
+                    id="donationSectionBtn"
+                    class="btn text-primary font-semibold text-xl active">
                     Donation
                 </button>
                 <button
-                    class="btn bg-btnColor text-primary font-semibold text-xl">
+                    id="historySectionBtn"
+                    class="btn text-primary font-semibold text-xl">
                     History
                 </button>
             </section>
             <!-- !SECTION - END Navigation-Buttons -->
 
             <!-- SECTION donation card container -->
-            <section class="w-10/12 m-auto p-8 flex flex-col gap-8">
+            <section
+                id="donation-section"
+                class="sm:w-10/12 m-auto p-8 flex flex-col gap-8">
                 <!-- SECTION card-1  -->
                 <section
-                    class="card-1 border border-cardBorder shadow-lg p-8 rounded-2xl flex gap-8">
+                    class="card-1 border border-cardBorder shadow-lg p-8 rounded-2xl flex flex-col lg:flex-row gap-8">
                     <!-- ANCHOR card-1 img container -->
                     <div class="card-img flex-1">
                         <img
@@ -124,14 +143,16 @@
                     </div>
                     <!-- ANCHOR card-1 text container -->
                     <div
-                        class="card-text flex-1 flex flex-col justify-center gap-8">
+                        class="card-text flex-1 flex flex-col justify-center gap-4 xl:gap-6">
                         <button
-                            class="btn bg-cardBtn text-secondary font-regular text-base w-1/4">
+                            class="btn bg-cardBtn text-secondary font-regular text-base xl:w-1/3 lg:w-1/2 md:w-1/3 w-40">
                             <img src="./assets/coin.png" alt="coin" />
-                            <span>0</span>
+                            <span id="initialAmount">100</span>
                             <span>BDT</span>
                         </button>
-                        <h3 class="text-primary text-xl font-bold leading-7">
+                        <h3
+                            id="noakhaliTransactionHistory"
+                            class="text-primary text-xl font-bold leading-7">
                             Donate for Flood at Noakhali, Bangladesh
                         </h3>
                         <p
@@ -144,13 +165,19 @@
                             supporting the relief efforts and making a positive
                             impact on the lives of those in need.
                         </p>
+                        <!-- ANCHOR card-1 input field -->
                         <input
+                            id="inputAmount"
                             type="text"
                             placeholder="Write Donation Amount"
                             class="input input-bordered text-primary text-base w-full" />
+
+                        <!-- ANCHOR card-1 button -->
                         <button
-                            class="btn bg-btnColor text-primary font-semibold text-xl w-full">
-                            Blog
+                            id="donateBtn"
+                            class="btn bg-btnColor text-primary font-semibold text-xl w-full"
+                            onclick="my_modal_1.showModal()">
+                            Donate Now
                         </button>
                     </div>
                 </section>
@@ -158,7 +185,7 @@
 
                 <!-- SECTION card-2  -->
                 <section
-                    class="card-1 border border-cardBorder shadow-lg p-8 rounded-2xl flex gap-8">
+                    class="card-1 border border-cardBorder shadow-lg p-8 rounded-2xl flex flex-col lg:flex-row gap-8">
                     <!-- ANCHOR card-2 img container -->
                     <div class="card-img flex-1">
                         <img
@@ -169,11 +196,11 @@
 
                     <!-- ANCHOR card-2 text container -->
                     <div
-                        class="card-text flex-1 flex flex-col justify-center gap-8">
+                        class="card-text flex-1 flex flex-col justify-center gap-4 xl:gap-6">
                         <button
-                            class="btn bg-cardBtn text-secondary font-regular text-base w-1/4">
+                            class="btn bg-cardBtn text-secondary font-regular text-base xl:w-1/3 lg:w-1/2 md:w-1/3 w-40">
                             <img src="./assets/coin.png" alt="coin" />
-                            <span>600</span>
+                            <span id="initialAmount2">600</span>
                             <span>BDT</span>
                         </button>
 
@@ -193,13 +220,19 @@
                             difference. Please consider donating today to assist
                             those in urgent need.
                         </p>
+                        <!-- ANCHOR card-2 input field -->
                         <input
+                            id="inputAmount2"
                             type="text"
                             placeholder="Write Donation Amount"
                             class="input input-bordered text-primary text-base w-full" />
+
+                        <!--   ANCHOR card-2 donate button -->
                         <button
-                            class="btn bg-btnColor text-primary font-semibold text-xl w-full">
-                            Blog
+                            id="donateBtn2"
+                            class="btn bg-btnColor text-primary font-semibold text-xl w-full"
+                            onclick="my_modal_1.showModal()">
+                            Donate Now
                         </button>
                     </div>
                 </section>
@@ -207,7 +240,7 @@
 
                 <!-- SECTION card-3  -->
                 <section
-                    class="card-1 border border-cardBorder shadow-lg p-8 rounded-2xl flex gap-8">
+                    class="card-1 border border-cardBorder shadow-lg p-8 rounded-2xl flex flex-col lg:flex-row gap-8">
                     <!-- ANCHOR card-3 img container -->
                     <div class="card-img flex-1">
                         <img
@@ -217,11 +250,11 @@
                     </div>
                     <!-- ANCHOR card-3 text container -->
                     <div
-                        class="card-text flex-1 flex flex-col justify-center gap-8">
+                        class="card-text flex-1 flex flex-col justify-center gap-4 xl:gap-6">
                         <button
-                            class="btn bg-cardBtn text-secondary font-regular text-base w-1/4">
+                            class="btn bg-cardBtn text-secondary font-regular text-base xl:w-1/3 lg:w-1/2 md:w-1/3 w-40">
                             <img src="./assets/coin.png" alt="coin" />
-                            <span>2400</span>
+                            <span id="initialAmount3">2400</span>
                             <span>BDT</span>
                         </button>
 
@@ -244,19 +277,55 @@
                             need.
                         </p>
                         <input
+                            id="inputAmount3"
                             type="text"
                             placeholder="Write Donation Amount"
                             class="input input-bordered text-primary text-base w-full" />
                         <button
-                            class="btn bg-btnColor text-primary font-semibold text-xl w-full">
-                            Blog
+                            id="donateBtn3"
+                            class="btn bg-btnColor text-primary font-semibold text-xl w-full"
+                            onclick="my_modal_1.showModal()">
+                            Donate Now
                         </button>
                     </div>
                 </section>
                 <!-- !SECTION - END card-3 -->
             </section>
             <!-- !SECTION - END card -->
+
+            <!-- SECTION history -->
+
+            <!-- !SECTION - END history -->
         </main>
+        <section
+            id="history-section"
+            class="hidden history-card-container md:w-10/12 m-auto p-8 space-y-6">
+            <h1
+                class="text-3xl leading-snug text-secondary text-center w-10/12 m-auto">
+                Transaction History Not Found
+            </h1>
+        </section>
+        <div class="pb-40"></div>
+
+        <!-- TODO success modal -->
+
+        <!-- Open the modal using ID.showModal() method -->
+        <dialog id="my_modal_1" class="modal">
+            <div class="modal-box text-center">
+                <h3 class="text-3xl font-bold mb-4">Congrats!</h3>
+                <img src="./assets/coin.png" alt="" class="m-auto" />
+                <p class="py-4 font-normal">You Have Donated For Humankind</p>
+                <h4 class="font-bold">Successfully</h4>
+
+                <div class="modal-action justify-center my-4">
+                    <form method="dialog">
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn">close confirmation</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
+
         <!-- TODO JavaScript file links -->
         <script src="./js/utilitis.js"></script>
         <script src="./js/script.js"></script>
