--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
     </head>
     <body class="font-Lexend">
         <!-- SECTION Header -->
-        <header class="bg-[#F9F7F3] w-full">
+        <header class="bg-yellow-50 w-full">
             <nav class="navbar w-10/12 m-auto p-0 pt-6 md:pb-16 pb-6">
                 <div class="navbar-start">
                     <a
