functioanlity is checking(2)

--- a/blog.html
+++ b/blog.html
@@ -83,7 +83,7 @@
                 <nav class="navbar w-10/12 m-auto p-0 pt-6 md:pb-16 pb-6 z-10">
                     <div class="navbar-start">
                         <a
-                            href="./blog.html"
+                            href="./index.html"
                             class="btn bg-btnColor text-primary font-semibold text-xl">
                             Blog
                         </a>
