functioanlity is checking(3)

--- a/blog.html
+++ b/blog.html
@@ -80,7 +80,7 @@
         <!-- SECTION Header -->
         <header id="sticky-header" class="w-full">
             <section id="sticky-nav" class="bg-yellow-50">
-                <nav class="navbar w-10/12 m-auto p-0 pt-6 md:pb-16 pb-6 z-10">
+                <nav class="navbar w-10/12 m-auto p-0 py-6">
                     <div class="navbar-start">
                         <a
                             href="./index.html"
@@ -115,16 +115,17 @@
         <!-- !SECTION - END Header -->
 
         <main class="w-10/12 m-auto py-12">
-            <h1 class="text-3xl font-bold flex gap-4">
+            <h1 class="lg:text-4xl text-2xl font-bold flex gap-4 xl:py-6">
                 Important FAQ
                 <img src="./assets/question.png" alt="" class="w-12 -mt-2" />
             </h1>
 
-            <section class="space-y-6 mt-6">
+            <section class="mt-6 border border-cardBorder rounded-2xl">
                 <!--TODO question 1 -->
-                <div class="border border-cardBorder shadow-sm rounded-2xl p-8">
+                <div class="border-b border-cardBorder shadow-sm m-0 p-8">
                     <details>
-                        <summary class="text-base font-bold text-primary">
+                        <summary
+                            class="md:text-xl text-base font-bold text-primary">
                             What is the Document Object Model (DOM)?
                         </summary>
                         <p
@@ -140,9 +141,10 @@
                 </div>
 
                 <!--TODO question 2 -->
-                <div class="border border-cardBorder shadow-sm rounded-2xl p-8">
+                <div class="border-b border-cardBorder shadow-sm m-0 p-8">
                     <details>
-                        <summary class="text-base font-bold text-primary">
+                        <summary
+                            class="md:text-xl text-base font-bold text-primary">
                             How do you select an element form the DOM?
                         </summary>
 
@@ -182,9 +184,10 @@
                 </div>
 
                 <!--TODO question 3 -->
-                <div class="border border-cardBorder shadow-sm rounded-2xl p-8">
+                <div class="border-b border-cardBorder shadow-sm m-0 p-8">
                     <details>
-                        <summary class="text-base font-bold text-primary">
+                        <summary
+                            class="md:text-xl text-base font-bold text-primary">
                             What is event delegation in the context of the DOM,
                             and why is it useful?
                         </summary>
@@ -221,9 +224,10 @@
                 </div>
 
                 <!--TODO question 4 -->
-                <div class="border border-cardBorder shadow-sm rounded-2xl p-8">
+                <div class="shadow-sm m-0 p-8">
                     <details>
-                        <summary class="text-base font-bold text-primary">
+                        <summary
+                            class="md:text-xl text-base font-bold text-primary">
                             How do you manipulate an element's attributes and
                             style using the DOM?
                         </summary>
