--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     </head>
     <body class="font-Lexend">
         <!-- SECTION Header -->
-        <header id="sticky-header" class="w-full">
+        <header id="sticky-header" class="w-full border-b border-cardBorder">
             <section id="sticky-nav" class="bg-yellow-50">
-                <nav class="navbar w-10/12 m-auto p-0 pt-6 md:pb-16 pb-6 z-10">
+                <nav class="navbar w-10/12 m-auto p-0 py-6">
                     <div class="navbar-start">
                         <a
                             href="./blog.html"
@@ -124,8 +124,7 @@
             </section>
 
             <!-- SECTION Navigation Buttons -->
-            <section
-                class="text-center flex justify-center gap-4 lg:pt-20 lg:pb-8 py-8">
+            <section class="text-center flex justify-center gap-4 pt-16 pb-8">
                 <button
                     id="donationSectionBtn"
                     class="btn text-primary font-semibold text-xl active">
@@ -145,7 +144,7 @@
             <!-- SECTION donation card container -->
             <section
                 id="donation-section"
-                class="sm:w-10/12 m-auto p-8 flex flex-col gap-8">
+                class="sm:w-10/12 m-auto p-8 flex flex-col gap-8 mt-4">
                 <!-- SECTION card-1  -->
                 <section
                     class="card-1 border border-cardBorder shadow-lg p-8 rounded-2xl flex flex-col lg:flex-row gap-8">
