--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     <div
                         class="card-text flex-1 flex flex-col justify-center gap-4 xl:gap-6">
                         <button
-                            class="btn bg-cardBtn text-secondary font-regular text-base xl:w-1/3 lg:w-1/2 md:w-1/3 w-40">
+                            class="btn bg-cardBtn text-secondary font-regular text-base xl:w-1/3 lg:w-1/2 md:w-1/3 w-1/2">
                             <img src="./assets/coin.png" alt="coin" />
                             <span id="initialAmount">100</span>
                             <span>BDT</span>
@@ -211,7 +211,7 @@
                     <div
                         class="card-text flex-1 flex flex-col justify-center gap-4 xl:gap-6">
                         <button
-                            class="btn bg-cardBtn text-secondary font-regular text-base xl:w-1/3 lg:w-1/2 md:w-1/3 w-40">
+                            class="btn bg-cardBtn text-secondary font-regular text-base xl:w-1/3 lg:w-1/2 md:w-1/3 w-1/2">
                             <img src="./assets/coin.png" alt="coin" />
                             <span id="initialAmount2">600</span>
                             <span>BDT</span>
@@ -266,7 +266,7 @@
                     <div
                         class="card-text flex-1 flex flex-col justify-center gap-4 xl:gap-6">
                         <button
-                            class="btn bg-cardBtn text-secondary font-regular text-base xl:w-1/3 lg:w-1/2 md:w-1/3 w-40">
+                            class="btn bg-cardBtn text-secondary font-regular text-base xl:w-1/3 lg:w-1/2 md:w-1/3 w-1/2">
                             <img src="./assets/coin.png" alt="coin" />
                             <span id="initialAmount3">2400</span>
                             <span>BDT</span>
