--- a/blog.html
+++ b/blog.html
@@ -74,6 +74,9 @@
                 backdrop-filter: blur(164px);
                 background-color: rgba(254, 240, 138, 0.2) !important;
             }
+            code {
+                word-wrap: break-word;
+            }
         </style>
     </head>
     <body class="font-Lexend">
@@ -156,26 +159,30 @@
                         <ul
                             class="text-base font-normal text-secondary leading-6 list-disc ml-8">
                             <li>
-                                <code>document.getElementById('id')</code>
+                                <code class="text-wrap">
+                                    document.getElementById('id')
+                                </code>
                                 - Selects an element by its ID.
                             </li>
 
                             <li>
-                                <code
-                                    >document.getElementsByClassName('class')</code
-                                >
+                                <code class="text-wrap">
+                                    document.getElementsByClassName('class')
+                                </code>
                                 - Selects elements by their class name.
                             </li>
 
                             <li>
-                                <code
-                                    >document.getElementsByTagName('tag')</code
-                                >
+                                <code class="text-wrap">
+                                    document.getElementsByTagName('tag')
+                                </code>
                                 - Selects elements by their tag name.
                             </li>
 
                             <li>
-                                <code>document.querySelector('selector')</code>
+                                <code class="text-wrap">
+                                    document.querySelector('selector')
+                                </code>
                                 - Selects the first element that matches a CSS
                                 selector.
                             </li>
