--- a/blog.html
+++ b/blog.html
@@ -88,7 +88,7 @@
                         <a
                             href="./index.html"
                             class="btn bg-btnColor text-primary font-semibold text-xl">
-                            Blog
+                            Home
                         </a>
                     </div>
                     <div class="navbar-center flex gap-4">
